--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "mongoose": "^6.1.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "cz-conventional-changelog": "^3.3.0",
