--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
     "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "mongoose": "^6.1.7"
+    "jest": "^27.4.7",
+    "mongoose": "^6.1.7",
+    "supertest": "^6.2.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
