--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@types/mongoose": "^5.11.97",
+    "babel-jest": "^27.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jest": "^27.4.7",
     "mongoose": "^6.1.7",
-    "supertest": "^6.2.2"
+    "regenerator-runtime": "^0.13.9",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
