--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:async": "./node_modules/jest/bin/jest.js --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
