--- a/client/arc/package.json
+++ b/client/arc/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.25.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "native-base": "^3.3.1",
