--- a/client/package.json
+++ b/client/package.json
@@ -30,8 +30,7 @@
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "tailwind-rn": "^4.0.0"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -39,7 +38,6 @@
     "@types/react-native": "~0.64.12",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.13",
     "typescript": "~4.3.5"
   },
   "private": true
